--- a/index.html
+++ b/index.html
@@ -32,6 +32,31 @@
     <title>Zomato Clone</title>
   </head>
   <body>
-    
+    <!-- __Is used because of BEM Approach -->
+    <section class="hero__section">
+    <header>
+      <nav class="navbar">
+        <a href="#">Get The App</a>
+        <div class="navbar__menu__container">
+          <a href="#" class="link" >Investor Relations</a>
+          <a href="#" class="link" > Add restaurant</a>
+          <a href="#" class="link" >Log in</a>
+          <a href="#" class="link" >Sign up</a>
+          <a href="#" class="user__icon">
+            <i class="fa-solid fa-user"></i>
+          </a>
+        </div>
+      </nav>
+    </header>
+    <div class="hero__section_container">
+      <img src="images/heroSectionLogo.png" class="hero__section_logo" alt="zomato logo">
+      <h1>Discover the best food & drinks in Nandyal</h1>
+      <div class="hero__section_input_container">
+        <input type="text" class="input" placeholder="Nandyal">
+        <input type="text" class="input" placeholder="Search for restaurant,cuisine or a dish">
+      </div>
+    </div>
+    </section>
+
      </body>
 </html>
