This the complete Day-1 Banner Section

--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
     </header>
     <div class="hero__section_container">
       <img src="images/heroSectionLogo.png" class="hero__section_logo" alt="zomato logo">
-      <h1>Discover the best food & drinks in Nandyal</h1>
+      <h1 class="hero__section_title">Discover the best food & drinks in Nandyal</h1>
       <div class="hero__section_input_container">
-        <input type="text" class="input" placeholder="Nandyal">
-        <input type="text" class="input" placeholder="Search for restaurant,cuisine or a dish">
+        <input type="text" class="input_container_location" placeholder="Nandyal">
+        <input type="text" class="input_container_search" placeholder="Search for restaurant,cuisine or a dish">
       </div>
     </div>
     </section>
