--- a/index.html
+++ b/index.html
@@ -58,5 +58,32 @@
     </div>
     </section>
 
+    <!-- Day-2 cards thing -->
+    <section class="container__we_offer" >
+      <div class="we__offer_card">
+        <img src="./images/item1.png" alt="Item1">
+        <div class="we__offer_content">
+          <h2>Order Online</h2>
+          <p>Stay home and order to your doorstep</p>
+        </div>
+      </div>
+
+      <div class="we__offer_card">
+        <img src="./images/item2.png" alt="Item2">
+        <div class="we__offer_content">
+          <h2>Dining</h2>
+          <p>View the city's favourite dining venues</p>
+        </div>
+      </div>
+
+      <div class="we__offer_card">
+        <img src="./images/item3.png" alt="item3">
+        <div class="we__offer_content">
+          <h2>Nightlife and Clubs</h2>
+          <p>Explore the top city's top nightlife outlets</p>
+        </div>
+      </div>
+    </section>
+
      </body>
 </html>
