This the Day-3 collections section

--- a/index.html
+++ b/index.html
@@ -85,5 +85,56 @@
       </div>
     </section>
 
+    <!-- Day-3 Collection Section -->
+
+    <section class="container collections">
+      <h1>Collections</h1>
+      <div class="sub__heading_container">
+        <span>
+          Explore curated lists of top restaurants, cafes, pubs, and bars in Chennai, based on trends
+        </span>
+        <span>
+          All collections in Nandyal 
+        </span>
+      </div>
+
+      <div class="collections_card_container">
+        <div class="card card1">
+          <div class="overlay"></div>
+            <div class="content">
+              <h4>Live Cricket Screening</h4>
+              <span>60 Places</span>
+            </div>
+        </div>
+
+        <div class="card card2">
+          <div class="overlay"></div>
+            <div class="content">
+              <h4>Some Special Sweets</h4>
+              <span>40 Places</span>
+            </div>
+            
+        </div>
+
+        <div class="card card3">
+          <div class="overlay"></div>
+            <div class="content">
+              <h4>Newly Opened restaurants</h4>
+              <span>30 Places</span>
+            </div>
+        </div>
+
+        <div class="card card4">
+          <div class="overlay"></div>
+            <div class="content">
+              <h4>Great Cafes, near me</h4>
+              <span>80 Places</span>
+            </div>
+        </div>
+
+      </div>
+
+    </section>
+
      </body>
 </html>
