--- a/index.html
+++ b/index.html
@@ -136,5 +136,42 @@
 
     </section>
 
+    <!-- Day-4 Get App section -->
+
+    <section class="container get__the_app">
+      <div class="semicontainer">
+        <div class="left">
+          <img src="./images/mobileBanner.png" alt="mobilescreen">
+        </div>
+      
+      <div class="right">
+        <h1>Get the Zomato App</h1>
+        <p>We will send you a link, open it on your phone to download the app</p>
+     
+      <div class="radio__button_container">
+        <div>
+          <input type="radio" name="download_app" id="email">
+          <label for="email" style="font-size: 14px;">Email</label>
+        </div>
+        <div>
+          <input type="radio" name="download_app" id="phone">
+          <label for="phone" style="font-size: 14px;">Phone Number</label>
+        </div>
+      </div>
+      <div class="input_container">
+        <input type="text" placeholder="Email">
+        <button>Share App Link</button>
+      </div>
+      <div class="downloap__app_container">
+        <h5>Download App from</h5>
+        <div>
+          <img src="./images/playStore.png" alt="playstore" class="get_images">
+          <img src="./images/appleStore.png" alt="appleStore" class="get_images">
+        </div>
+      </div>
+    </div>
+  </div>
+    </section>
+
      </body>
 </html>
